# rsqueue

./: .gitignore  AUTH.md  Cargo.toml  DOCKER_HUB_SETUP.md  Dockerfile  README.md  cargo.toml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker-build-push.yml  docker-release.yml
queue_specs/: notifications.json
requests/rsqueue/: Read messages.bru  bruno.json  create queue.bru  create.bru  create2.bru  health.bru
src/: lib.rs  main.rs
static/: dashboard.html
tests/: integration_tests.rs
