[package]
name = "rsqueue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "auth", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
base64 = "0.22"
prometheus = "0.13"
lazy_static = "1.4"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
axum-test = "14.0"
tempfile = "3.8"

